<resources>
    <string name="app_name">Cotizația A.S.Racheta</string>
    <string name="app_titlu_princ">Afișare situații statistice</string>
    <string name="anul">Introduceti anul</string>
    <string name="racheta">Site-Racheta</string>
    <string name="help">Help</string>
    <string name="logout">Iesire</string>
    <string name="iesire">Inchide pagina</string>
    <string name="afiseaza"><font fgcolor="#ffffff">Afișează opțiunea selectată</font></string>

    <string name="lipsa_an"><font fgcolor="#ff9a1d1d"><big><b>Nu ati introdus anul cautarii !</b></big></font></string>
    <string name="lipsa_optiune"><font fgcolor="#ff9a1d1d"><big><b>Nu ati ales optiunea cautarii !</b></big></font></string>
    <string name="site_racheta">Site-Racheta</string>

    <string name="Auth">Autentificare</string>
    <string name="Hint">Email</string>

    <string name="email_hint">Email</string>
    <string name="nume_platitor_hint">Nume Plătitor</string>
    <string name="suma_hint">Suma (RON)</string>
    <string name="renunta">Renunță</string>

    <string name="Statistici">Statistici asociație</string>
    <string name="SitCotMem">Situația cotizației pe membru</string>
    <string name="CotAsAn">Cotizație asociație pe an</string>
    <string name="TotCheltAn">Total cheltuieli asociatie pe an</string>
    <string name="SitFinGen">Situația financiară generală</string>
    <string name="SitFinAnuala">Situația financiară anuală</string>
    <string name="TotDonatii">Total donații primite pe an</string>
    <string name="PlataOnline">Platește cotizația online</string>
    <string name="BalantaDetails">Balanța-detalii</string>

    <string name="total_cotizatie">Total cotizație: %1$s lei</string>
    <string name="total_donatii">Total donații: %1$s lei</string>
    <string name="total_cheltuieli">Total cheltuieli: %1$s lei</string>
    <string name="total_comisioane">Comisioane plăți online: %1$s lei</string>
    <string name="total_sold">Sold rămas: %1$s lei</string>

    <string name="inapoi_la_main">Înapoi la ecranul principal</string>

    <!-- Titluri -->
    <string name="titlu_dinamic">Titlu dinamic</string>
    <string name="data_placeholder">14 august 2025</string>

    <string name="error_processing_data">Eroare la procesarea datelor</string>
    <string name="error_api_connection">Eroare la conectarea cu API-ul</string>
    <string name="error_network">Eroare rețea. Verifică conexiunea la internet.</string>

    <string-array name="tip_plata_options">
        <item>Cotizatie</item>
        <item>Donatie</item>
    </string-array>



    <string name="TitluHelp">Cateva precizari pentru folosirea aplicatiei</string>

    <string name="Continut1Help">Folosind aceasta aplicatie puteti sa consultati urmatoarele: \n\n
    </string>

    <string name="Continut2Help">
    - situatia la zi a fiecarui membru cotizant\n
    - situatia anuala a cotizatiei membrilor asociatiei\n
    - situatia anuala a donatiilor primite de asociatiei\n
    - situatia cheltuielilor asociatiei\n
    - situatia cu total venituri si cheltuieli\n
    - situatia financiara pentru anul selectat\n
    - balanta detaliata atat pe anul selectat cat si balanta generala\n
    - puteti plati cotizatia sau face donatii online in deplina siguranta\n
    - puteti accesa situl A.S."Racheta" pentru mai multe informatii\n\n</string>

    <string name="Continut3Help">Pentru a vizualiza informatiile , introduceti anul pe care il doriti si apoi selectati optiunea de afisare dorita\n\n
    Pe bara aplicatiei aveti optiunea de a parasi aplicatia si un meniu reprezentat prin trei puncte asezata vertical
    in care gasiti doua optiuni :\n</string>

    <string name="Continut4Help">
     - prima va permite sa vizualizati situl A.S."Racheta"\n
     - a doua afiseaza acest help\n\n</string>
    <string name="total_donatii_primite_pe_an">Total donatii primite pe an</string>

    <!-- Descrieri pentru accesibilitate -->
    <string name="statistics_header_description">Tabel de statistici</string>
    <string name="table_scroll_description">Tabel de statistici derulabil orizontal</string>
    <string name="back_button_description">Buton pentru a reveni la ecranul anterior</string>


</resources>