<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/TitluHelp"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/textViewHelpContent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/Continut1Help"
        android:textColor="@color/ContinutHelpText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewHelpContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Continut2Help"
        android:textColor="@color/ContinutHelpText"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/textViewHelpContent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Continut3Help"
        android:textColor="@color/ContinutHelpText"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/textViewHelpContent4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Continut4Help"
        android:textColor="@color/ContinutHelpText"
        android:textSize="12sp"
        />

    <Button
        android:id="@+id/buttonInapoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/mybutton"
        android:text="@string/iesire"
        android:textSize="12sp"

         />

</LinearLayout>

</ScrollView>
