<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="36dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="@drawable/edittext_background" />

    <EditText
        android:id="@+id/numeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nume_platitor_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/tipPlataSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/sumaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suma_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/trimitePlata"
        android:text="@string/PlataOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/mybutton"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/renuntaPlata"
        android:text="@string/renunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_renunta"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTintMode="src_over"
        app:backgroundTint="@android:color/transparent"/>
</LinearLayout>
