<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitlu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/caseta"
        android:text="@string/app_titlu_princ"
        android:textAlignment="center"
        android:textColor="@color/edit_text_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAnul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/anul"
        android:inputType="number"
        android:textColor="#041B2E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/radio_grup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitlu"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/mybutton"
        android:text="@string/afiseaza"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_grup"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/btnPlataOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/PlataOnline"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSend" />


    <RadioGroup
        android:id="@+id/radio_grup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/caseta"
        android:clipToPadding="false"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAnul">

        <RadioButton
            android:id="@+id/radio_cot_persoana"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/SitCotMem" />

        <RadioButton
            android:id="@+id/radio_total_cot_pe_an"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/CotAsAn" />
        <!--android:onClick="onRadioButtonClicked"-->
        <!--        android:textColor="@color/white"-->

        <RadioButton
            android:id="@+id/radio_donatii_asoc_an"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/TotDonatii" />

        <RadioButton
            android:id="@+id/radio_chelt_asoc_an"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/TotCheltAn" />

        <RadioButton
            android:id="@+id/radio_sit_gen_asoc"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/SitFinGen" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>